05-auth/k8s/10-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: user
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: klwxsrx/arch-course-labs-05-auth-service
          ports:
            - name: web
              containerPort: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: user
  name: userprofile
  labels:
    app: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
        - name: userprofile
          image: klwxsrx/arch-course-labs-05-userprofile-service
          ports:
            - name: web
              containerPort: 8080
